test/fail/basic_syntax/subscript_out_of_range.lly
#[
IndexError: Index -10 is out of range.
Traceback:
    from subscript_out_of_range.lly:7: in __main__
]#

"Ā ā Ă ă Ą"[-10]
